// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data layer integration tests Test exams IDA url Should call the exams service to fetch attempt data 1`] = `
Object {
  "examState": Object {
    "activeAttempt": Object {
      "accessibility_time_string": "you have 30 minutes remaining",
      "attempt_code": "",
      "attempt_id": 1,
      "attempt_status": "started",
      "course_id": "course-v1:test+special+exam",
      "desktop_application_js_url": "",
      "exam_display_name": "timed",
      "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
      "exam_type": "a timed exam",
      "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
      "in_timed_exam": true,
      "software_download_url": "",
      "taking_as_proctored": false,
      "time_remaining_seconds": 1799.9,
      "total_time": "30 minutes",
    },
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {
      "attempt": Object {
        "accessibility_time_string": "you have 30 minutes remaining",
        "attempt_code": "",
        "attempt_id": 1,
        "attempt_status": "started",
        "course_id": "course-v1:test+special+exam",
        "desktop_application_js_url": "",
        "exam_display_name": "timed",
        "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
        "exam_type": "a timed exam",
        "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
        "in_timed_exam": true,
        "software_download_url": "",
        "taking_as_proctored": false,
        "time_remaining_seconds": 1799.9,
        "total_time": "30 minutes",
      },
      "backend": "test",
      "content_id": "block-v1:test+special+exam+type@sequential+block@abc123",
      "course_id": "course-v1:test+special+exam",
      "due_date": null,
      "exam_name": "prock exam",
      "external_id": null,
      "hide_after_due": false,
      "id": 1,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": Object {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": Array [],
        "failed_prerequisites": Array [],
        "pending_prerequisites": Array [],
        "satisfied_prerequisites": Array [],
      },
      "time_limit_mins": 30,
      "total_time": "30 minutes",
      "type": "timed",
    },
    "isLoading": false,
    "proctoringSettings": Object {
      "contact_us": "",
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "link_urls": null,
      "platform_name": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test exams IDA url Should call the exams service to get latest attempt data 1`] = `
Object {
  "examState": Object {
    "activeAttempt": Object {
      "accessibility_time_string": "you have 30 minutes remaining",
      "attempt_code": "",
      "attempt_id": 1,
      "attempt_status": "ready_to_submit",
      "course_id": "course-v1:test+special+exam",
      "desktop_application_js_url": "",
      "exam_display_name": "timed",
      "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
      "exam_type": "a timed exam",
      "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
      "in_timed_exam": true,
      "software_download_url": "",
      "taking_as_proctored": false,
      "time_remaining_seconds": 1799.9,
      "total_time": "30 minutes",
    },
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {},
    "isLoading": false,
    "proctoringSettings": Object {
      "contact_us": "",
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "link_urls": null,
      "platform_name": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test getExamAttemptsData Should get, and save exam and attempt 1`] = `
Object {
  "examState": Object {
    "activeAttempt": Object {
      "accessibility_time_string": "you have 30 minutes remaining",
      "attempt_code": "",
      "attempt_id": 1,
      "attempt_status": "started",
      "course_id": "course-v1:test+special+exam",
      "desktop_application_js_url": "",
      "exam_display_name": "timed",
      "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
      "exam_type": "a timed exam",
      "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
      "in_timed_exam": true,
      "software_download_url": "",
      "taking_as_proctored": false,
      "time_remaining_seconds": 1799.9,
      "total_time": "30 minutes",
    },
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {
      "attempt": Object {
        "accessibility_time_string": "you have 30 minutes remaining",
        "attempt_code": "",
        "attempt_id": 1,
        "attempt_status": "started",
        "course_id": "course-v1:test+special+exam",
        "desktop_application_js_url": "",
        "exam_display_name": "timed",
        "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
        "exam_type": "a timed exam",
        "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
        "in_timed_exam": true,
        "software_download_url": "",
        "taking_as_proctored": false,
        "time_remaining_seconds": 1799.9,
        "total_time": "30 minutes",
      },
      "backend": "test",
      "content_id": "block-v1:test+special+exam+type@sequential+block@abc123",
      "course_id": "course-v1:test+special+exam",
      "due_date": null,
      "exam_name": "prock exam",
      "external_id": null,
      "hide_after_due": false,
      "id": 1,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": Object {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": Array [],
        "failed_prerequisites": Array [],
        "pending_prerequisites": Array [],
        "satisfied_prerequisites": Array [],
      },
      "time_limit_mins": 30,
      "total_time": "30 minutes",
      "type": "timed",
    },
    "isLoading": false,
    "proctoringSettings": Object {
      "contact_us": "",
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "link_urls": null,
      "platform_name": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test getLatestAttemptData Should get, and save latest attempt 1`] = `
Object {
  "examState": Object {
    "activeAttempt": Object {
      "accessibility_time_string": "you have 30 minutes remaining",
      "attempt_code": "",
      "attempt_id": 1,
      "attempt_status": "started",
      "course_id": "course-v1:test+special+exam",
      "desktop_application_js_url": "",
      "exam_display_name": "timed",
      "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
      "exam_type": "a timed exam",
      "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
      "in_timed_exam": true,
      "software_download_url": "",
      "taking_as_proctored": false,
      "time_remaining_seconds": 1799.9,
      "total_time": "30 minutes",
    },
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {},
    "isLoading": false,
    "proctoringSettings": Object {
      "contact_us": "",
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "link_urls": null,
      "platform_name": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test getProctoringSettings Should fail to fetch if error occurs 1`] = `
Object {
  "contact_us": "",
  "exam_proctoring_backend": Object {
    "download_url": "",
    "instructions": Array [],
    "name": "",
    "rules": Object {},
  },
  "integration_specific_email": "",
  "learner_notification_from_email": "",
  "link_urls": null,
  "platform_name": "",
  "provider_name": "",
  "provider_tech_support_email": "",
  "provider_tech_support_phone": "",
}
`;

exports[`Data layer integration tests Test getProctoringSettings Should get, and save proctoringSettings 1`] = `
Object {
  "contact_us": "info@example.com",
  "exam_proctoring_backend": Object {
    "download_url": "",
    "instructions": Array [],
    "name": "",
    "rules": Object {},
  },
  "integration_specific_email": "",
  "learner_notification_from_email": "",
  "link_urls": Object {
    "contact_us": "https://example.com/contact_us/",
    "faq": "https://example.com/faq/",
    "online_proctoring_rules": "https://example.com/online_proctoring_rules/",
    "tech_requirements": "https://example.com/tech_requirements/",
  },
  "platform_name": "Your Platform Name Here",
  "provider_name": "",
  "provider_tech_support_email": "",
  "provider_tech_support_phone": "",
}
`;

exports[`Data layer integration tests Test pollAttempt Should poll exam attempt, and update attempt and exam 1`] = `
Object {
  "accessibility_time_string": "you have 30 minutes remaining",
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "timed",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "a timed exam",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test pollAttempt Should poll exam attempt, and update attempt and exam 2`] = `
Object {
  "accessibility_time_string": "you have 30 minutes remaining",
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "timed",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "a timed exam",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test resetExam Should reset exam, and update attempt and exam 1`] = `
Object {
  "examState": Object {
    "activeAttempt": null,
    "allowProctoringOptOut": false,
    "apiErrorMsg": "Request failed with status code 404",
    "exam": Object {
      "attempt": Object {
        "accessibility_time_string": "you have 30 minutes remaining",
        "attempt_code": "",
        "attempt_id": 2,
        "attempt_status": "created",
        "course_id": "course-v1:test+special+exam",
        "desktop_application_js_url": "",
        "exam_display_name": "timed",
        "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
        "exam_type": "a timed exam",
        "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
        "in_timed_exam": true,
        "software_download_url": "",
        "taking_as_proctored": false,
        "time_remaining_seconds": 1799.9,
        "total_time": "30 minutes",
      },
      "backend": "test",
      "content_id": "block-v1:test+special+exam+type@sequential+block@abc123",
      "course_id": "course-v1:test+special+exam",
      "due_date": null,
      "exam_name": "prock exam",
      "external_id": null,
      "hide_after_due": false,
      "id": 1,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": Object {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": Array [],
        "failed_prerequisites": Array [],
        "pending_prerequisites": Array [],
        "satisfied_prerequisites": Array [],
      },
      "time_limit_mins": 30,
      "total_time": "30 minutes",
      "type": "timed",
    },
    "isLoading": false,
    "proctoringSettings": Object {
      "contact_us": "",
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "link_urls": null,
      "platform_name": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test startProctoredExam Should start exam, and update attempt and exam 1`] = `
Object {
  "accessibility_time_string": "you have 30 minutes remaining",
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "timed",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "a timed exam",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test startTimedExam Should start exam, and update attempt and exam 1`] = `
Object {
  "accessibility_time_string": "you have 30 minutes remaining",
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "timed",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "a timed exam",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "total_time": "30 minutes",
}
`;
